syntax = "proto3";
package proto;

option java_multiple_files = true;
option java_package = "code.barryyan.proto";
option java_outer_classname = "Hello";

service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
